--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   tests-on-ubuntu-24-04:
     runs-on: ubuntu-24.04
+    defaults:
+      run:
+        shell: bash -el {0}
 
     steps:
       - name: Checkout repository
