--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install build dependencies
+        run: python -m pip install --upgrade pip build
+        
       - name: Build package
         run: python -m build
 
@@ -77,4 +80,3 @@ jobs:
           repository-url: https://test.pypi.org
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
-
