--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -77,6 +77,6 @@ jobs:
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org
+          repository-url: https://test.pypi.org/legacy
           user: __token__
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
