--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -5,62 +5,62 @@ on:
       - 'devel-*'
 
 jobs:
-  # tests-on-ubuntu-24-04:
-  #   if: startsWith(github.ref, 'refs/heads/devel')
+  tests:
+    if: startsWith(github.ref, 'refs/heads/devel')
 
-  #   runs-on: ${{ matrix.os }}
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
 
-  #   defaults:
-  #     run:
-  #       shell: bash -el {0}
+    defaults:
+      run:
+        shell: bash -el {0}
 
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  #     - name: Install Miniconda
-  #       uses: conda-incubator/setup-miniconda@v3
+      - name: Install Miniconda
+        uses: conda-incubator/setup-miniconda@v3
 
-  #     - name: Set up Conda environment
-  #       run: |
-  #         conda create -y -c conda-forge -n dolfin_warp \
-  #           expat=2.5 \
-  #           fenics=2019.1.0 \
-  #           matplotlib=3.5 \
-  #           meshio=5.3 \
-  #           mpi4py=3.1.3 \
-  #           numpy=1.23.5 \
-  #           pandas=1.3 \
-  #           pip \
-  #           python=3.10 \
-  #           scipy=1.8 \
-  #           vtk=9.1
-  #         conda activate dolfin_warp
-  #         conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1
-  #         conda deactivate
-  #         conda activate dolfin_warp
+      - name: Set up Conda environment
+        run: |
+          conda create -y -c conda-forge -n dolfin_warp \
+            expat=2.5 \
+            fenics=2019.1.0 \
+            matplotlib=3.5 \
+            meshio=5.3 \
+            mpi4py=3.1.3 \
+            numpy=1.23.5 \
+            pandas=1.3 \
+            pip \
+            python=3.10 \
+            scipy=1.8 \
+            vtk=9.1
+          conda activate dolfin_warp
+          conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1
+          conda deactivate
+          conda activate dolfin_warp
 
-  #     - name: Install Python libraries
-  #       run: |
-  #         conda activate dolfin_warp
-  #         pip install \
-  #           git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git \
-  #           git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git \
-  #           git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git \
-  #           git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+      - name: Install Python libraries
+        run: |
+          conda activate dolfin_warp
+          pip install \
+            git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git \
+            git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git \
+            git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git \
+            git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
 
-  #     - name: Run tests
-  #       run: |
-  #         conda activate dolfin_warp
-  #         cd Tests
-  #         ln -s ../dolfin_warp
-  #         make
+      - name: Run tests
+        run: |
+          conda activate dolfin_warp
+          cd Tests
+          ln -s ../dolfin_warp
+          make
 
   deploy:
-    # if: startsWith(github.ref, 'refs/heads/master')
+    if: startsWith(github.ref, 'refs/heads/master')
 
     runs-on: ubuntu-latest
 
@@ -74,9 +74,15 @@ jobs:
       - name: Build package
         run: python -m build
 
-      - name: Publish to TestPyPI
+      - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          repository-url: https://test.pypi.org/legacy/
           user: __token__
-          password: ${{ secrets.TEST_PYPI_API_TOKEN }}
+          password: ${{ secrets.PYPI_API_TOKEN }}
+
+      # - name: Publish to TestPyPI
+      #   uses: pypa/gh-action-pypi-publish@release/v1
+      #   with:
+      #     repository-url: https://test.pypi.org/legacy/
+      #     user: __token__
+      #     password: ${{ secrets.TEST_PYPI_API_TOKEN }}
