--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -45,10 +45,10 @@ jobs:
         run: |
           conda activate dolfin_warp
           pip install \
-            git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git \
-            git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git \
-            git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git \
-            git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+            git+https://github.com/mgenet/myPythonLibrary.git \
+            git+https://github.com/mgenet/myVTKPythonLibrary.git \
+            git+https://github.com/mgenet/vtkpython_cbl.git \
+            git+https://github.com/mgenet/dolfin_mech.git
 
       - name: Run tests
         run: |
