--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,34 @@
 stages:
+  # - build
   - test
-  - deploy
+  # - deploy
+
+# build_docker:
+#   stage: build
+#   tags:
+#     - ci.inria.fr
+#     - large
+#   image: ubuntu:20.04
+#   script:
+#     - apt update; DEBIAN_FRONTEND=noninteractive apt install -y ca-certificates curl git gnupg lsb-release mercurial python3 python3-pip tzdata
+#     - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+#     - echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+#     - apt update; apt install -y docker-ce docker-ce-cli containerd.io
+#     - docker images
+#     - docker rmi -f $CI_REGISTRY_IMAGE || true
+#     - docker images --filter="reference=$CI_REGISTRY_IMAGE" --format="{{.Repository}}:{{.Tag}}" | xargs docker rmi || true
+#     - docker images
+#     - docker image prune -f
+#     - docker images
+#     - python3 -m pip install jupyter-repo2docker
+#     - repo2docker --no-run --user-id 1000 --user-name jovyan --image-name $CI_REGISTRY_IMAGE .repo2docker
+#     - docker images
+#     - docker image tag $CI_REGISTRY_IMAGE $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
+#     - docker images
+#     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+#     - docker push $CI_REGISTRY_IMAGE
+#     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHORT_SHA
+#     - docker logout $CI_REGISTRY
 
 tests-on-ubuntu-20.04-with-apt: # MG20230608: This leads to seg fault while manipulating vtk objects inside cpp fenics expressions… # MG20241020: I think the mesh reader fails…
   stage: test
@@ -17,7 +45,7 @@ tests-on-ubuntu-20.04-with-apt: # MG20230608: This leads to seg fault while mani
     - apt update; apt install -y libvtk7-dev python3-vtk7; export CPATH="/usr/include/vtk-7.1":$CPATH
     - apt update; apt install -y libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxft-dev libxinerama1 gcc-multilib xvfb gmsh; pip install gmsh
     - apt update; apt install -y python3-h5py; pip install meshio; pip install numpy==1.23.5 # MG20220814: meshio needs updated numpy apparently # MG20230103: apparently numpy >= 1.24 does not work anymore with the old version of pandas (and probably other stuff) present in Ubuntu 20.04 apt repo, cf. https://stackoverflow.com/a/74975994
-    - pip install git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 tests-on-ubuntu-22.04-with-apt: # MG20230608: This leads to seg fault while manipulating vtk objects inside cpp fenics expressions… # MG20241020: I think the image reader fails…
@@ -35,7 +63,7 @@ tests-on-ubuntu-22.04-with-apt: # MG20230608: This leads to seg fault while mani
     - apt update; apt install -y libvtk9-dev python3-vtk9; export CPATH="/usr/include/vtk-9.1":$CPATH
     - apt update; apt install -y libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxft-dev libxinerama1 gcc-multilib xvfb gmsh; pip install gmsh
     - apt update; apt install -y python3-h5py; pip install meshio; pip install numpy==1.24.4 # MG20220814: meshio needs updated numpy apparently # MG20230103: apparently numpy >= 1.25 does not work with FEniCS
-    - pip install git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 tests-on-ubuntu-24.04-with-apt: # MG 20241017: apt python version is 3.12, which seems incompatible with numpy 1.24…
@@ -53,7 +81,7 @@ tests-on-ubuntu-24.04-with-apt: # MG 20241017: apt python version is 3.12, which
     - apt update; apt install -y libvtk9-dev python3-vtk9; export CPATH="/usr/include/vtk-9.1":$CPATH
     - apt update; apt install -y libgl1-mesa-dev libglu1-mesa-dev libxcursor-dev libxft-dev libxinerama1 gcc-multilib xvfb gmsh; pip install --break-system-packages gmsh
     - apt update; apt install -y python3-h5py; pip install --break-system-packages meshio; pip install --break-system-packages numpy==1.24.4 # MG20220814: meshio needs latest numpy apparently # MG20230103: apparently numpy >= 1.25 does not work with FEniCS
-    - pip install --break-system-packages git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install --break-system-packages git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 tests-on-ubuntu-20.04:
@@ -73,7 +101,7 @@ tests-on-ubuntu-20.04:
     # - conda install conda-libmamba-solver; conda config --set solver libmamba # MG20241017: This is now the default solver, cf. https://conda.org/blog/2023-11-06-conda-23-10-0-release
     - conda create -y -c conda-forge -n dolfin_warp expat=2.5 fenics=2019.1.0 matplotlib=3.5 meshio=5.3 mpi4py=3.1.3 numpy=1.23.5 pandas=1.3 pip python=3.10 scipy=1.8 vtk=9.1; conda activate dolfin_warp # MG20230608: need to install meshio via conda because pip install has h5py dependency issues # MG20230608: need to install vtk9 because vtk7 seems to require python2 # MG20241020: expat > 2.5 seems to break vtkXMLDataParser, cf. https://gitlab.kitware.com/vtk/vtk/-/issues/19258
     - conda activate dolfin_warp; conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1; conda deactivate; conda activate dolfin_warp
-    - pip install git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 tests-on-ubuntu-22.04:
@@ -93,7 +121,7 @@ tests-on-ubuntu-22.04:
     # - conda install conda-libmamba-solver; conda config --set solver libmamba # MG20241017: This is now the default solver, cf. https://conda.org/blog/2023-11-06-conda-23-10-0-release
     - conda create -y -c conda-forge -n dolfin_warp expat=2.5 fenics=2019.1.0 matplotlib=3.5 meshio=5.3 mpi4py=3.1.3 numpy=1.23.5 pandas=1.3 pip python=3.10 scipy=1.8 vtk=9.1; conda activate dolfin_warp # MG20230608: need to install meshio via conda because pip install has h5py dependency issues
     - conda activate dolfin_warp; conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1; conda deactivate; conda activate dolfin_warp
-    - pip install git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 tests-on-ubuntu-24.04:
@@ -113,7 +141,7 @@ tests-on-ubuntu-24.04:
     # - conda install conda-libmamba-solver; conda config --set solver libmamba # MG20241017: This is now the default solver, cf. https://conda.org/blog/2023-11-06-conda-23-10-0-release
     - conda create -y -c conda-forge -n dolfin_warp expat=2.5 fenics=2019.1.0 matplotlib=3.5 meshio=5.3 mpi4py=3.1.3 numpy=1.23.5 pandas=1.3 pip python=3.10 scipy=1.8 vtk=9.1; conda activate dolfin_warp # MG20230608: need to install meshio via conda because pip install has h5py dependency issues
     - conda activate dolfin_warp; conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1; conda deactivate; conda activate dolfin_warp
-    - pip install git+https://gitlab.inria.fr/mgenet/myPythonLibrary.git git+https://gitlab.inria.fr/mgenet/myVTKPythonLibrary.git git+https://gitlab.inria.fr/mgenet/vtkpython_cbl.git git+https://gitlab.inria.fr/mgenet/dolfin_mech.git
+    - pip install git+https://github.com/mgenet/myPythonLibrary.git git+https://github.com/mgenet/myVTKPythonLibrary.git git+https://github.com/mgenet/vtkpython_cbl.git git+https://github.com/mgenet/dolfin_mech.git
     - cd Tests; ln -s ../dolfin_warp; make
 
 # docker:
@@ -144,31 +172,31 @@ tests-on-ubuntu-24.04:
 #     - echo Docker logout
 #     - docker logout $CI_REGISTRY
 
-pypi:
-  stage: deploy
-  only:
-    - master
-  tags:
-    - ci.inria.fr
-    - small
-  image: python
-  variables:
-    TWINE_USERNAME: $PYPI_USER
-    TWINE_PASSWORD: $PYPI_PASS
-  script:
-    - pip install -U setuptools twine
-    - python setup.py sdist bdist_wheel
-    - twine upload dist/*
+# pypi:
+#   stage: deploy
+#   only:
+#     - master
+#   tags:
+#     - ci.inria.fr
+#     - small
+#   image: python
+#   variables:
+#     TWINE_USERNAME: $PYPI_USER
+#     TWINE_PASSWORD: $PYPI_PASS
+#   script:
+#     - pip install -U setuptools twine
+#     - python setup.py sdist bdist_wheel
+#     - twine upload dist/*
 
-gitlab:
-  stage: deploy
-  only:
-    - master
-  tags:
-    - ci.inria.fr
-    - small
-  image: python
-  script:
-    - pip install -U setuptools twine
-    - python setup.py sdist bdist_wheel
-    - TWINE_USERNAME=gitlab-ci-token TWINE_PASSWORD=${CI_JOB_TOKEN} twine upload --verbose --skip-existing --repository-url https://gitlab.inria.fr/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
+# gitlab:
+#   stage: deploy
+#   only:
+#     - master
+#   tags:
+#     - ci.inria.fr
+#     - small
+#   image: python
+#   script:
+#     - pip install -U setuptools twine
+#     - python setup.py sdist bdist_wheel
+#     - TWINE_USERNAME=gitlab-ci-token TWINE_PASSWORD=${CI_JOB_TOKEN} twine upload --verbose --skip-existing --repository-url https://gitlab.inria.fr/api/v4/projects/${CI_PROJECT_ID}/packages/pypi dist/*
