--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,6 +27,7 @@ jobs:
           conda create -y -c conda-forge -n dolfin_warp \
             expat=2.5 \
             fenics=2019.1.0 \
+            gnuplot=5.4 \
             matplotlib=3.5 \
             meshio=5.3 \
             mpi4py=3.1.3 \
@@ -34,10 +35,10 @@ jobs:
             pandas=1.3 \
             pip \
             python=3.10 \
-            scipy=1.8 \
-            vtk=9.1
+            scipy=1.9 \
+            vtk=9.2
           conda activate dolfin_warp
-          conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.1
+          conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.2
           conda deactivate
           conda activate dolfin_warp
 
