--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,12 +1,13 @@
 on:
   push:
     branches:
-      - devel
-      - 'devel-*'
+    - devel
+    - 'devel-*'
 
 jobs:
-  tests:
+  run_tests:
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-22.04, ubuntu-24.04]
@@ -16,43 +17,43 @@ jobs:
         shell: bash -el {0}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@main
 
-      - name: Install Miniconda
-        uses: conda-incubator/setup-miniconda@v3
+    - name: Install Miniconda
+      uses: conda-incubator/setup-miniconda@main
 
-      - name: Set up Conda environment
-        run: |
-          conda create -y -c conda-forge -n dolfin_warp \
-            expat=2.5 \
-            fenics=2019.1.0 \
-            gnuplot=5.4 \
-            matplotlib=3.5 \
-            meshio=5.3 \
-            mpi4py=3.1.3 \
-            numpy=1.23.5 \
-            pandas=1.3 \
-            pip \
-            python=3.10 \
-            scipy=1.9 \
-            vtk=9.2
-          conda activate dolfin_warp
-          conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.2
-          conda deactivate
-          conda activate dolfin_warp
+    - name: Set up Conda environment
+      run: |
+        conda create -y -c conda-forge -n dolfin_warp \
+          expat=2.5 \
+          fenics=2019.1.0 \
+          gnuplot=5.4 \
+          matplotlib=3.5 \
+          meshio=5.3 \
+          mpi4py=3.1.3 \
+          numpy=1.23.5 \
+          pandas=1.3 \
+          pip \
+          python=3.10 \
+          scipy=1.9 \
+          vtk=9.2
+        conda activate dolfin_warp
+        conda env config vars set CPATH=$CONDA_PREFIX/include/vtk-9.2
+        conda deactivate
+        conda activate dolfin_warp
 
-      - name: Install Python libraries
-        run: |
-          conda activate dolfin_warp
-          pip install \
-            git+https://github.com/mgenet/myPythonLibrary.git \
-            git+https://github.com/mgenet/myVTKPythonLibrary.git \
-            git+https://github.com/mgenet/dolfin_mech.git
+    - name: Install Python libraries
+      run: |
+        conda activate dolfin_warp
+        pip install \
+          git+https://github.com/mgenet/myPythonLibrary.git \
+          git+https://github.com/mgenet/myVTKPythonLibrary.git \
+          git+https://github.com/mgenet/dolfin_mech.git
 
-      - name: Run tests
-        run: |
-          conda activate dolfin_warp
-          cd Tests
-          ln -s ../dolfin_warp
-          make
+    - name: Run tests
+      run: |
+        conda activate dolfin_warp
+        cd Tests
+        ln -s ../dolfin_warp
+        make
