--- a/.github/workflows/deploy_to_pypi.yml
+++ b/.github/workflows/deploy_to_pypi.yml
@@ -4,14 +4,14 @@ on:
       - master
 
 jobs:
-  deploy:
+  deploy_to_pypi:
     # if: startsWith(github.ref, 'refs/heads/master')
 
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@main
 
       - name: Install build dependencies
         run: python -m pip install --upgrade pip build
